--- a/views/index.html
+++ b/views/index.html
@@ -1,3 +1,5 @@
+{{#extend "main" }}
+    {{#content "body"}}
 <div class="row">
   <div class="well">
     <p class="lead">
@@ -21,3 +23,6 @@
     </table>
   [% END %]
 </div>
+    {{/content}}
+{{/extend}}
+
