--- a/views/data-widget.html
+++ b/views/data-widget.html
@@ -1,8 +1,8 @@
 $(function() {
-    $("#[% space.name %]-[% datapoint.name %]").append(
-        '<span class="datavalue">[% datapoint.value %]</span>'
+    $("#{{data.space}}-{{data.name}}").append(
+        '<span class="datavalue">{{data.value}}</span>'
         + ' <span class="updatetime">last updated: '
-        + '<abbr class="timeago" title="[% datapoint.datetime.iso8601 %]">'
-        + '[% datapoint.datetime %]</abbr></span>'
+        + '<abbr class="timeago" title="{{data.last_updated}}">'
+        + '{{data.last_updated}}</abbr></span>'
     ); 
 });
