--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-{{#block "head"}}
+
 <head>
-<meta http-equiv="Content-type" content="text/html; charset=[% settings.charset %]" />
+{{#block "head"}}
+<meta http-equiv="Content-type" content="text/html; charset=UTF8" />
 <title>VHSAPI</title>
-<link rel="stylesheet" href="http://api.hackspace.ca/css/bootstrap.css" />
-<link rel="stylesheet" href="http://api.hackspace.ca/css/style.css" />
+<link rel="stylesheet" href="/css/bootstrap.css" />
+<link rel="stylesheet" href="/css/style.css" />
 
 <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
 <script type="text/javascript">/* <![CDATA[ */
-    !window.jQuery && document.write('<script type="text/javascript" src="http://api.hackspace.ca/javascripts/jquery.js"><\/script>')
+    !window.jQuery && document.write('<script type="text/javascript" src="/javascripts/jquery.js"><\/script>')
 /* ]]> */</script>
-<script src="http://api.hackspace.ca/javascripts/jquery.timeago.js" type="text/javascript"></script>
+<script src="/javascripts/jquery.timeago.js" type="text/javascript"></script>
 
-</head>
 {{/block}}
+</head>
 <body>
+  {{#block "body"}}
   <div class="container">
     <div class="row">
       <div class="span6">
@@ -25,13 +27,14 @@
         <p class="lead">An API about your local hackerspace.</p>
       </div>
     </div>
-    {{#block "body"}}
-    {{/block}}
   </div>
+  {{/block}}
   <footer class="footer">
+    {{#block "footer"}}
     <div class="container">
     Created by <a href="http://twitter.com/lukec">@lukec</a> for <a href="http://vancouver.hackspace.ca">Vancouver Hack Space</a> using <a href="http://perldancer.org/">Dancer</a>.  The code is <a href="http://github.com/vhs/api">up on Github</a>!
     </div>
+    {{/block}}
   </footer>
 </body>
 <script>
