--- a/views/data.html
+++ b/views/data.html
@@ -1,5 +1,6 @@
 {{#extend "main"}}
   {{#content "body" mode="append"}}
+  <div class="container">
 <div class="row">
     <h2>{{data.space}} - {{data.name}}</h2>
     <div class="well">
@@ -18,6 +19,7 @@
 </p>
                 
 
-</div>
+  </div><!-- .row -->
+  </div><!-- .container -->
   {{/content}}
 {{/extend}}
