--- a/views/index.html
+++ b/views/index.html
@@ -1,13 +1,14 @@
 {{#extend "main" }}
-    {{#content "body"}}
-<div class="row">
-  <div class="well">
-    <p class="lead">
-      This project exists to create a simple API that devices at the <a href="http://vancouver.hackspace.ca">Vancouver Hack Space</a> can use to communicate with other systems.
-    </p>
-  </div>
-  <h2>Hackerspace Data</h2>
-  {{#each spaces}}
+  {{#content "body" mode="append"}}
+  <div class="container">
+  <div class="row">
+    <div class="well">
+      <p class="lead">
+        This project exists to create a simple API that devices at the <a href="http://vancouver.hackspace.ca">Vancouver Hack Space</a> can use to communicate with other systems.
+      </p>
+    </div>
+    <h2>Hackerspace Data</h2>
+    {{#each spaces}}
     <h3>{{name}}</h3>
     <table class="table">
       <tr>
@@ -15,14 +16,15 @@
       </tr>
       {{#each members}}
         <tr class="table-striped">
-          <td><a href="{{../name}}/data/{{name}}"{{>name}}</a></td>
+          <td><a href="{{uri}}">{{name}}</a></td>
           <td>{{value}}</td>
-          <td><abbr class="timeago" title="[% point.datetime.iso8601 %]">{{last_update}}</abbr></td>
+          <td><abbr class="timeago" title="{{datetime}}">{{last_update}}</abbr></td>
         </tr>
       {{/each}}
     </table>
   {{/each}}
-</div>
-    {{/content}}
+  </div>
+  </div>
+  {{/content}}
 {{/extend}}
 
