--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -32,7 +32,7 @@
   <footer class="footer">
     {{#block "footer"}}
     <div class="container">
-    Created by <a href="http://twitter.com/lukec">@lukec</a> for <a href="http://vancouver.hackspace.ca">Vancouver Hack Space</a> using <a href="http://perldancer.org/">Dancer</a>.  The code is <a href="http://github.com/vhs/api">up on Github</a>!
+    Created by the <a href="http://vancouver.hackspace.ca">Vancouver Hack Space</a>.  The code is <a href="http://github.com/vhs/api">up on Github</a>!
     </div>
     {{/block}}
   </footer>
