Replaced redis with influx just because we have it. Main page times are broken if using influx < 0.9.5

--- a/views/data-full.html
+++ b/views/data-full.html
@@ -25,7 +25,7 @@ bottom: 0px;
     <div class="container">
       <div id="fact">
         <h1>{{data.value}}</h1>
-        <div id="facttime" class="label pull-right">As of <abbr class="timeago" title="{{data.datetime}}">{{data.last_updated}}</abbr></div>
+        <div id="facttime" class="label pull-right">As of <abbr class="timeago" title="{{data.last_updated}}">{{data.last_updated}}</abbr></div>
       </div>
     </div>
   {{/content}}
