--- a/views/data-full.html
+++ b/views/data-full.html
@@ -32,7 +32,7 @@ bottom: 0px;
   {{#content "footer"}}
   <div class="container">
     <p class="pull-right">
-      <a href="http://api.hackspace.ca">VHS API</a>
+      <a href="http://api.vanhack.ca">VHS API</a>
     </p>
   </div>
   {{/content}}
