--- a/views/data.html
+++ b/views/data.html
@@ -13,7 +13,7 @@
       <p>To dynamically embed the value of this data in your site, include the following code snippet:
 <pre>
   &lt;div id="{{space}}-{{data.name}}">&lt;/div>
-  &lt;script src="http://api.hackspace.ca/s/{{space}}/data/{{data.name}}.js" >&lt;/script>
+  &lt;script src="http://api.vanhack.ca/s/{{space}}/data/{{data.name}}.js" >&lt;/script>
 </pre>
   <em>(You will need jQuery loaded on the including page.  You could also consider using <a href="http://timeago.yarp.com/">Timeago.js</a> to improve the formatting of the date.)</em>
 </p>
