--- a/views/data-dual-full.html
+++ b/views/data-dual-full.html
@@ -40,7 +40,7 @@
   {{#content "footer"}}
       <div class="container">
         <p class="pull-right">
-          <a href="http://api.hackspace.ca">VHS API</a>
+          <a href="http://api.vanhack.ca">VHS API</a>
         </p>
       </div>
   {{/content}}
