--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="well">
       <p class="lead">
-        This project exists to create a simple API that devices at the <a href="http://vancouver.hackspace.ca">Vancouver Hack Space</a> can use to communicate with other systems.
+        This project exists to create a simple API that devices at the <a href="http://vanhack.ca">Vancouver Hack Space</a> can use to communicate with other systems.
       </p>
     </div>
     <h2>Hackerspace Data</h2>
