--- a/views/data-widget.html
+++ b/views/data-widget.html
@@ -1,8 +1,8 @@
 $(function() {
-    $("#{{data.space}}-{{data.name}}").append(
-        '<span class="datavalue">{{data.value}}</span>'
-        + ' <span class="updatetime">last updated: '
-        + '<abbr class="timeago" title="{{data.last_updated}}">'
-        + '{{data.last_updated}}</abbr></span>'
-    ); 
+$("#{{data.space}}-{{data.name}}").append(
+'<span class="datavalue">{{data.value}}</span>'
++ ' <span class="updatetime">last updated: '
+    + '<time class="timeago" datetime="{{data.last_updated}}">'
+        + '{{data.last_updated}}</time></span>'
+);
 });
