--- a/views/data-full.html
+++ b/views/data-full.html
@@ -1,39 +1,42 @@
 {{#extend "main"}}
-  {{#content "head" mode="append"}}
-   <style type="text/css">
-        h1 {
-            font-size: 144pt;
-        }
-        #fact       {
-            position: fixed;
-            left: 50%;
-            margin-left: -250px;
-            top: 50%;
-            margin-top: -50px;
-        }
-        #facttime {
-            margin-top: 80px;
-        }
-        .footer {
-position: fixed;
-bottom: 0px;
-        }
-           
-    </style>
-  {{/content}}
-  {{#content "body"}}
-    <div class="container">
-      <div id="fact">
-        <h1>{{data.value}}</h1>
-        <div id="facttime" class="label pull-right">As of <abbr class="timeago" title="{{data.last_updated}}">{{data.last_updated}}</abbr></div>
-      </div>
-    </div>
-  {{/content}}
-  {{#content "footer"}}
-  <div class="container">
-    <p class="pull-right">
-      <a href="http://api.vanhack.ca">VHS API</a>
-    </p>
+{{#content "head" mode="append"}}
+<style type="text/css">
+  h1 {
+    font-size: 144pt;
+  }
+
+  #fact {
+    position: fixed;
+    left: 50%;
+    margin-left: -250px;
+    top: 50%;
+    margin-top: -50px;
+  }
+
+  #facttime {
+    margin-top: 80px;
+  }
+
+  .footer {
+    position: fixed;
+    bottom: 0px;
+  }
+</style>
+{{/content}}
+{{#content "body"}}
+<div class="container">
+  <div id="fact">
+    <h1>{{data.value}}</h1>
+    <div id="facttime" class="label pull-right">As of <time class="timeago"
+        datetime="{{data.last_updated}}">{{data.last_updated}}</time></div>
   </div>
-  {{/content}}
+</div>
+{{/content}}
+{{#content "footer"}}
+<div class="container">
+  <p class="pull-right">
+    <a href="https://api.vanhack.ca">VHS API</a>
+  </p>
+</div>
+{{/content}}
 {{/extend}}
