--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -1,23 +1,26 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html
+  PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "https://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="https://www.w3.org/1999/xhtml">
 
 <head>
-{{#block "head"}}
-<meta http-equiv="Content-type" content="text/html; charset=UTF8" />
-<title>VHSAPI</title>
-<link rel="stylesheet" href="/css/bootstrap.css" />
-<link rel="stylesheet" href="/css/style.css" />
+  {{#block "head"}}
+  <meta http-equiv="Content-type" content="text/html; charset=UTF8" />
+  <title>VHSAPI</title>
+  <link rel="stylesheet" href="/css/bootstrap.css" />
+  <link rel="stylesheet" href="/css/style.css" />
 
-<!-- Grab Google CDN's jQuery. fall back to local if necessary -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
-<script type="text/javascript">/* <![CDATA[ */
-    !window.jQuery && document.write('<script type="text/javascript" src="/javascripts/jquery.js"><\/script>')
+  <!-- Grab jQuery and timeago from cloudflare CDN. fall back to local if necessary -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-timeago/1.6.7/jquery.timeago.min.js"
+    type="text/javascript"></script>
+  <script type="text/javascript">/* <![CDATA[ */
+    !window.jQuery
+      && document.write('<script type="text/javascript" src="/javascripts/jquery.min.js"><\/script>')
+      && document.write('<script type="text/javascript" src="/javascripts/jquery.timeago.min.js"><\/script>')
 /* ]]> */</script>
-<script src="/javascripts/jquery.timeago.js" type="text/javascript"></script>
-
-{{/block}}
+  {{/block}}
 </head>
+
 <body>
   {{#block "body"}}
   <div class="container">
@@ -32,14 +35,16 @@
   <footer class="footer">
     {{#block "footer"}}
     <div class="container">
-    Created by the <a href="http://vanhack.ca">Vancouver Hack Space</a>.  The code is <a href="http://github.com/vhs/api">up on Github</a>!
+      Created by the <a href="https://vanhack.ca">Vancouver Hack Space</a>. The code is <a
+        href="https://github.com/vhs/api">up on Github</a>!
     </div>
     {{/block}}
   </footer>
 </body>
 <script>
-  jQuery(function() {
-      jQuery("abbr.timeago").timeago();
+  $(document).ready(function () {
+    jQuery(".timeago").timeago();
   });
 </script>
+
 </html>
